implement ennemie position compute with lidar

--- a/config.json
+++ b/config.json
@@ -76,7 +76,7 @@
     },
     "lidar": {
       "distances_unit": "cm",
-      "angles_unit": "deg",
+      "angles_unit": "rad",
       "min_angle": -134.8335,
       "max_angle": 134.8335
     }
