--- a/config.json
+++ b/config.json
@@ -70,6 +70,8 @@
         5
       ],
       "god_hand_deployment_servo_pin": 6,
+      "god_hand_deployment_servo_deploye_angle": 90,
+      "god_hand_deployment_servo_undeploy_angle": 90,
       "god_hand_grab_servo_open_angle": 90,
       "god_hand_grab_servo_close_angle_diff_left": 22,
       "god_hand_grab_servo_close_angle_diff_right": -22
