--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,4 @@ server/computer/cam_venv/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/server/computer/sensors/camera/undistort_coef.json
