--- a/config.json
+++ b/config.json
@@ -65,7 +65,7 @@
     "log_level": 0,
     "print_log": true,
     "ws": {
-      "sender_name": "robot1",
+      "sender_name": "rob",
       "server_ip": "192.168.0.104"
     },
     "rolling_basis" : {
