--- a/.gitignore
+++ b/.gitignore
@@ -163,6 +163,7 @@ cython_debug/
 rasp/bot_venv/
 robot1/rasp/test_zones.py
 robot1/rasp/test_stage.py
+server/server_venv/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
