--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "python.formatting.provider": "black",
     "python.analysis.extraPaths": [
         "./common"
-    ]
+    ],
+    "cmake.configureOnOpen": false
 }
