--- a/config.json
+++ b/config.json
@@ -117,12 +117,15 @@
     "actuators": {
       "actuators_teensy_ser": 12678600,
       "front_god_hand":
-      [
-        {"pin":  2, "open_angle":  10, "close_angle":  35},
-        {"pin":  3, "open_angle":  10, "close_angle":  32},
-        {"pin":  4, "open_angle":  50, "close_angle":  30},
-        {"pin":  5, "open_angle":  58, "close_angle":  38}
-      ]
+      {
+        "take_servo": [
+          {"pin":  2, "open_angle":  10, "close_angle":  35},
+          {"pin":  3, "open_angle":  10, "close_angle":  32},
+          {"pin":  4, "open_angle":  50, "close_angle":  30},
+          {"pin":  5, "open_angle":  58, "close_angle":  38}
+        ],
+        "deployment_servo": {"pin":6,"open_angle":60,"close_angle":0}
+      }
     },
     "lidar": {
       "distances_unit": "cm",
