--- a/config.json
+++ b/config.json
@@ -68,6 +68,9 @@
       "sender_name": "rob",
       "server_ip": "192.168.0.104"
     },
+    "jack": {
+      "pin": 10
+    },
     "rolling_basis": {
       "rolling_basis_teensy_ser": 12675800,
       "go_to_profiles": {
