--- a/config.json
+++ b/config.json
@@ -151,6 +151,15 @@
           "pin": 6,
           "deploy_angle": 100,
           "undeploy_angle": 70
+        },
+        "elevator":{
+          "up_steps": 1000,
+          "down_steps": -1000,
+          "number_of_steps": 100,
+          "stepper_pin_1": 7,
+          "stepper_pin_2": 8,
+          "stepper_pin_3": 9,
+          "stepper_pin_4": 10
         }
       }
     },
