added buffer_zone in config. Too high => doesn't work, implemented test functions

--- a/config.json
+++ b/config.json
@@ -161,5 +161,9 @@
       "max_angle": 3.926991,
       "min_distance_detection": 5.0
     }
+  },
+  "arena" : {
+    "border_buffer" : 10,
+    "ennemy_buffer" : 25
   }
 }
