--- a/config.json
+++ b/config.json
@@ -75,6 +75,12 @@
     "jack": {
       "pin": 23
     },
+    "zone_switch": {
+      "pin": 22,
+      "activated": false,
+      "zone_off": 0,
+      "zone_on":3
+    },
     "rolling_basis": {
       "rolling_basis_teensy_ser": 12675800,
       "go_to_profiles": {
