--- a/config.json
+++ b/config.json
@@ -72,6 +72,7 @@
     "print_log": true,
     "stop_treshold": 50,
     "anticollision_mode": 1,
+    "anticollision_handle": 2,
     "zombie_mode": false,
     "max_stop_angle": 50,
     "jack": {
