--- a/config.json
+++ b/config.json
@@ -85,8 +85,33 @@
     "strip_led": {
       "pin": 18,
       "brightness": 70,
-      "num_leds": 8,
-      "frequency": 800000
+      "num_leds": 21,
+      "frequency": 800000,
+      "led_indexes": {
+        "is_ready": 0,
+        "jack": 1,
+        "team": 2,
+        "acs": 3,
+        "progress": [
+          5,
+          6,
+          7,
+          8
+        ],
+        "logs": [
+          10,
+          11,
+          12,
+          13,
+          14,
+          15,
+          16,
+          17,
+          18,
+          19,
+          20
+        ]
+      }
     },
     "rolling_basis": {
       "rolling_basis_teensy_ser": 12675800,
