--- a/config.json
+++ b/config.json
@@ -179,6 +179,8 @@
       "elevator": {
         "up_steps": 1000,
         "down_steps": -1000,
+        "up_direction": 1,
+        "down_direction": 0,
         "pin_dir": 21,
         "pin_step": 22
       },
