Led lidar dierction

--- a/config.json
+++ b/config.json
@@ -91,7 +91,24 @@
         "is_ready": 0,
         "jack": 1,
         "team": 2,
-        "acs": 3,
+        "acs_trigger": 3,
+        "lidar": [
+          20,
+          21,
+          22,
+          23,
+          24,
+          25,
+          26,
+          27,
+          28,
+          29,
+          30,
+          31,
+          32,
+          33,
+          34
+        ],
         "progress": [
           5,
           6,
