--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,26 @@
     "python.analysis.extraPaths": [
         "./common"
     ],
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "files.associations": {
+        "*.rs": "rust",
+        "__availability": "cpp",
+        "__config": "cpp",
+        "atomic": "cpp",
+        "chrono": "cpp",
+        "compare": "cpp",
+        "exception": "cpp",
+        "filesystem": "cpp",
+        "fstream": "cpp",
+        "new": "cpp",
+        "random": "cpp",
+        "sstream": "cpp",
+        "streambuf": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "system_error": "cpp",
+        "vector": "cpp",
+        "algorithm": "cpp",
+        "complex": "cpp"
+    }
 }
