--- a/config.json
+++ b/config.json
@@ -210,17 +210,16 @@
         }
       },
       "solar_panel": {
+        "detach_delay": 200,
         "right": {
           "pin": 9,
           "deploy_angle": 100,
-          "undeploy_angle": 12,
-          "detach_delay": 200
+          "undeploy_angle": 12
         },
         "left": {
           "pin": 8,
           "deploy_angle": 0,
-          "undeploy_angle": 82,
-          "detach_delay": 200
+          "undeploy_angle": 82
         }
       },
       "elevator": {
