--- a/config.json
+++ b/config.json
@@ -76,10 +76,27 @@
     "jack": {
       "pin": 23
     },
+    "team_config": {
+      "default_team": "y",
+      "start_info_by_team": {
+        "y": {
+          "start_zone_id": 0,
+          "start_x": 22.0,
+          "start_y": 22.0,
+          "start_theta": 1.5707963267948966
+        },
+        "b": {
+          "start_zone_id": 3,
+          "start_x": 22.0,
+          "start_y": 275.0,
+          "start_theta": -1.5707963267948966
+        }
+      }
+    },
     "team_switch": {
       "pin": 16,
-      "team_off": 3,
-      "team_on": 0
+      "team_off": "b",
+      "team_on": "y"
     },
     "strip_led": {
       "pin": 18,
