--- a/config.json
+++ b/config.json
@@ -95,8 +95,8 @@
     },
     "team_switch": {
       "pin": 16,
-      "team_off": "b",
-      "team_on": "y"
+      "team_off": "y",
+      "team_on": "b"
     },
     "strip_led": {
       "pin": 18,
