--- a/config.json
+++ b/config.json
@@ -240,8 +240,9 @@
         }
       },
       "elevator": {
-        "up_steps": 1000,
-        "down_steps": -1000,
+        "top_steps": 400,
+        "intermediate_steps": 283,
+        "bottom_steps": 0,
         "speed": 4000
       },
       "minimum_delay": 0.1
