--- a/config.json
+++ b/config.json
@@ -259,6 +259,7 @@
   },
   "arena": {
     "border_buffer": -10,
-    "robot_buffer": 20
+    "robot_buffer": 18,
+    "robot_buffer_with_god_hand_deployed": 25
   }
 }
