--- a/config.json
+++ b/config.json
@@ -104,11 +104,29 @@
       "num_leds": 96,
       "frequency": 800000,
       "led_indexes": {
-        "is_ready": 0,
-        "jack": 1,
-        "team": 2,
-        "acs_trigger": 3,
         "lidar": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11,
+          12
+        ],
+        "inside_front_right": [
+          13,
+          14,
+          15,
+          16,
+          17,
+          18,
+          19,
           20,
           21,
           22,
@@ -117,33 +135,87 @@
           25,
           26,
           27,
-          28,
-          29,
-          30,
-          31,
-          32,
+          28
+        ],
+        "inside_back_right": [
+          44,
+          43,
+          42,
+          41,
+          40,
+          39,
+          38,
+          37,
+          36,
+          35,
+          34,
           33,
-          34
+          32,
+          31,
+          30,
+          29
         ],
-        "progress": [
-          5,
-          6,
-          7,
-          8
+        "inside_back_left": [
+          45,
+          46,
+          47,
+          48,
+          49,
+          50,
+          51,
+          52,
+          53,
+          54,
+          55,
+          56,
+          57,
+          58,
+          59
         ],
-        "log": [
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19,
-          20
-        ]
+        "inside_front_left": [
+          75,
+          74,
+          73,
+          72,
+          71,
+          70,
+          69,
+          68,
+          67,
+          66,
+          65,
+          64,
+          63,
+          62,
+          61,
+          60
+        ],
+        "display": {
+          "tens": [
+            76,
+            77,
+            78,
+            79,
+            80,
+            81,
+            82,
+            83,
+            84,
+            85
+          ],
+          "units": [
+            95,
+            94,
+            93,
+            92,
+            91,
+            90,
+            89,
+            88,
+            87,
+            86
+          ]
+        }
       }
     },
     "rolling_basis": {
