Add score_estimate Rename a few led functions

--- a/config.json
+++ b/config.json
@@ -190,7 +190,7 @@
           61,
           60
         ],
-        "display": {
+        "score": {
           "tens": [
             76,
             77,
