--- a/config.json
+++ b/config.json
@@ -275,13 +275,24 @@
           "action_error_auth": 20,
           "traj_precision": 10
         },
-        "plant_pickup": {
-          "max_speed": 140,
+        "plant_approach": {
+          "max_speed": 160,
           "correction_trajectory_speed": 0,
           "acceleration_start_speed": 130,
           "acceleration_distance": 10,
-          "deceleration_end_speed": 100,
-          "deceleration_distance": 30,
+          "deceleration_end_speed": 130,
+          "deceleration_distance": 10,
+          "next_position_delay": 100,
+          "action_error_auth": 20,
+          "traj_precision": 40
+        },
+        "plant_pickup": {
+          "max_speed": 110,
+          "correction_trajectory_speed": 0,
+          "acceleration_start_speed": 110,
+          "acceleration_distance": 0,
+          "deceleration_end_speed": 110,
+          "deceleration_distance": 0,
           "next_position_delay": 100,
           "action_error_auth": 20,
           "traj_precision": 20
