--- a/config.json
+++ b/config.json
@@ -357,12 +357,14 @@
         "detach_delay": 200,
         "right": {
           "pin": 9,
-          "deploy_angle": 80,
+          "small_deploy_angle": 80,
+          "deploy_angle": 100,
           "undeploy_angle": 12
         },
         "left": {
           "pin": 8,
-          "deploy_angle": 0,
+          "small_deploy_angle": 0,
+          "deploy_angle": 82,
           "undeploy_angle": 62
         }
       },
