--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "vector": "cpp",
         "algorithm": "cpp",
         "complex": "cpp",
-        "cstddef": "cpp"
+        "cstddef": "cpp",
+        "xutility": "cpp"
     }
 }
